--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+angular-practice-exin_snapshot_*.md
+angular-repo-to-markdown.py
+angular-practice-exin_snapshot.md
+fromAngularProjectToMarkdown.py
